--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item ml-3">
-              <a class="nav-link text-dark" href="#">Nosotros</a>
+              <a class="nav-link text-dark" href="#Nosotros">Nosotros</a>
             </li>
             <li class="nav-item ml-3">
-              <a class="nav-link text-dark" href="#">Regalar</a>
+              <a class="nav-link text-dark" href="#Regalar">Regalar</a>
             </li>
             <li class="nav-item ml-3">
-              <a class="nav-link text-dark" href="#">Vender</a>
+              <a class="nav-link text-dark" href="#Vender">Vender</a>
             </li>
           </ul>
         </div>
@@ -42,20 +42,20 @@
     </nav>
 
     <main>
-      <section class="altura">
+      <section class="inicio", id="Nosotros">
         <div class="container">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col-12 col-sm-6 text-center">
               <h1>
                 El regalo perfecto esta aquí
               </h1>
-              <h3> Buscas un regalo o vendes cosas grandiosas? <br> Esta es tu app</h3>
-              <div class="row">
-                <div class="col-12 col-sm-6 text-center">
-                  <img class="img-fluid" src="icons/google-play-badge.svg" alt="google" width="200">
+              <h4> Buscas un regalo o vendes cosas grandiosas? Esta es tu app</h4>
+              <div class="d-flex justify-content-center">
+                <div class="col-8 col-sm-4 text-center">
+                  <img class="img-fluid" src="icons/google-play-badge.svg" alt="google" width="150">
                 </div>
-                <div class="col-12 col-sm-6 text-center">
-                  <img class="img-fluid" src="icons/app-store-badge.svg" alt="apple" width="200">
+                <div class="col-8 col-sm-4 text-center">
+                  <img class="img-fluid" src="icons/app-store-badge.svg" alt="apple" width="150">
                 </div>
               </div>
             </div>
@@ -66,41 +66,71 @@
         </div>
       </section>
 
-      <section class="altura">
+      <section class="clientes", id="Regalar">
         <div class="container">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col-12 col-sm-6 text-center">
               <img class="img-fluid" src="img/Clientes.svg" alt="Clientes" width="300">
             </div>
             <div class="col-12 col-sm-6">
-              <p>
-                Alguna vez te has quedado sin ideas para compar un regalo? si la respuesta es si, Smile es para ti:
-              </p>
-              <ul>
-                <li>Encuentra tu regalo ideal respondiendo pocas preguntas</li>
-                <li>Elige entre 3 opciones la que mas te gusta y habla con el proveedor</li>
-                <li>Con tu compra favoreces emprendimientos locales</li>
+              <h4>
+                Alguna vez te has quedado sin ideas para compar un regalo de cumple? si la respuesta es si, Smile es para ti:
+              </h4>
+              <ul class="list-unstyled">
+                <li class="media">
+                  <img src="icons/gift.svg" class="mr-3" alt="..." width="60">
+                  <div class="media-body">
+                    <h5 class="mt-0 mb-1">Encuentra tu regalo ideal respondiendo pocas preguntas</h5>
+                  </div>
+                </li>
+                <li class="media my-4">
+                  <img src="icons/gift.svg" class="mr-3" alt="..." width="60">
+                  <div class="media-body">
+                    <h5 class="mt-0 mb-1">Elige entre 3 opciones la que mas te gusta y habla con el proveedor</h5>
+                  </div>
+                </li>
+                <li class="media">
+                  <img src="icons/gift.svg" class="mr-3" alt="..." width="60">
+                  <div class="media-body">
+                    <h5 class="mt-0 mb-1">Con tu compra favoreces emprendimientos locales</h5>
+                  </div>
+                </li>
               </ul>
             </div>
           </div>
         </div>
       </section>
 
-      <section class="altura">
-        <div class="container">
-          <div class="column">
-            <div class="col-12 col-sm-12 text-center">
-              <img class="img-fluid" src="img/proveedores.svg" alt="Clientes" width="800">
+      <section class="proveedores", id="Vender">
+        <div class="container d-flex align-content-end">
+          <div class="row align-items-center">
+            <div class="col-12 col-sm-6">
+              <h4>
+                Estas iniciando tu negocio y quieres que las personas vean lo maravilloso que es? en Smile tenemos la oportunidad:
+              </h4>
+              <ul class="list-unstyled">
+                <li class="media">
+                  <img src="icons/mega.svg" class="mr-3" alt="..." width="60">
+                  <div class="media-body">
+                    <h5 class="mt-0 mb-1">Puedes registrar tus productos y lograr que quienes buscan un regalo te encuentren</h5>
+                  </div>
+                </li>
+                <li class="media my-4">
+                  <img src="icons/mega.svg" class="mr-3" alt="..." width="60">
+                  <div class="media-body">
+                    <h5 class="mt-0 mb-1">Una alternativa nueva para que tu negocio crezca</h5>
+                  </div>
+                </li>
+                <li class="media">
+                  <img src="icons/mega.svg" class="mr-3" alt="..." width="60">
+                  <div class="media-body">
+                    <h5 class="mt-0 mb-1">Logras llegar a tu publico objetivo gracias a nuestra app</h5>
+                  </div>
+                </li>
+              </ul>
             </div>
-            <div class="col-12 col-sm-12 text-center">
-                <p>
-                  Estas inciando tu negocio y quieres que mas personas vean lo maravilloso que es?, Smile es una oportunidad:
-                </p>
-                <ul>
-                  <li>Resgistra tus productos y logra que personas en busca de un regalo te vean</li>
-                  <li>Una alternativa para que tu negocio crezca</li>
-                  <li>Puedes visualizar y actulizar tus productos</li>
-                </ul>
+            <div class="col-12 col-sm-6 text-center">
+              <img class="img-fluid" src="img/proveedores.svg" alt="Clientes" width="600">
             </div>
           </div>
         </div>
