--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <!-- Icons-->
     <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+
     <title>Smile</title>
   </head>
   <body id="body" class="position-relative">
@@ -47,9 +49,10 @@
           <div class="row align-items-center">
             <div class="col-12 col-sm-6 text-center">
               <h1>
-                El regalo perfecto esta aquí
+                El regalo perfecto está aquí
               </h1>
-              <h4> Buscas un regalo o vendes cosas grandiosas? Esta es tu app</h4>
+              <h3> ¿Buscas un regalo o vendes cosas grandiosas? Esta es tu app!</h3>
+              <p>Smile está pensado para aquellas situaciones donde quieres dar un regalo estupendo con cariño en el cumple de alguien pero las ideas no llegan, aquí puedes encontrar el regalo ideal y no solo eso muy único pues las opciones que te mostramos pertenecen a emprendimientos locales donde algunos son artesanales y otros nuevos productos, por eso a la vez que haces feliz a quien recibe el regalo apoyas a quien lo vende a cumplir sus sueños.</p>
               <div class="d-flex justify-content-center">
                 <div class="col-8 col-sm-4 text-center">
                   <img class="img-fluid" src="icons/google-play-badge.svg" alt="google" width="150">
@@ -60,7 +63,7 @@
               </div>
             </div>
             <div class="col-12 col-sm-6 text-center">
-              <img class="img-fluid" src="img/Inicio.svg" alt="inicio" width="300">
+              <img class="img-fluid w-90" src="img/Inicio.svg" alt="inicio" width="300">
             </div>
           </div>
         </div>
@@ -70,11 +73,11 @@
         <div class="container">
           <div class="row align-items-center">
             <div class="col-12 col-sm-6 text-center">
-              <img class="img-fluid" src="img/Clientes.svg" alt="Clientes" width="300">
+              <img class="img-fluid w-90" src="img/Clientes.svg" alt="Clientes" width="300">
             </div>
             <div class="col-12 col-sm-6">
               <h4>
-                Alguna vez te has quedado sin ideas para compar un regalo de cumple? si la respuesta es si, Smile es para ti:
+                ¿Alguna vez te has quedado sin ideas para compar un regalo de cumple? si la respuesta es si, Smile es para ti:
               </h4>
               <ul class="list-unstyled">
                 <li class="media">
@@ -86,7 +89,7 @@
                 <li class="media my-4">
                   <img src="icons/gift.svg" class="mr-3" alt="..." width="60">
                   <div class="media-body">
-                    <h5 class="mt-0 mb-1">Elige entre 3 opciones la que mas te gusta y habla con el proveedor</h5>
+                    <h5 class="mt-0 mb-1">Elige entre 3 opciones la que más te gusta y habla con el proveedor</h5>
                   </div>
                 </li>
                 <li class="media">
@@ -106,7 +109,7 @@
           <div class="row align-items-center">
             <div class="col-12 col-sm-6">
               <h4>
-                Estas iniciando tu negocio y quieres que las personas vean lo maravilloso que es? en Smile tenemos la oportunidad:
+                ¿Estas iniciando tu negocio y quieres que las personas vean lo maravilloso que es? en Smile tenemos la oportunidad:
               </h4>
               <ul class="list-unstyled">
                 <li class="media">
@@ -124,13 +127,13 @@
                 <li class="media">
                   <img src="icons/mega.svg" class="mr-3" alt="..." width="60">
                   <div class="media-body">
-                    <h5 class="mt-0 mb-1">Logras llegar a tu publico objetivo gracias a nuestra app</h5>
+                    <h5 class="mt-0 mb-1">Logras llegar a tu público objetivo gracias a nuestra app</h5>
                   </div>
                 </li>
               </ul>
             </div>
             <div class="col-12 col-sm-6 text-center">
-              <img class="img-fluid" src="img/proveedores.svg" alt="Clientes" width="600">
+              <img class="img-fluid w-90" src="img/proveedores.svg" alt="Clientes" width="600">
             </div>
           </div>
         </div>
@@ -140,16 +143,22 @@
       
     </div>
 
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 
-
+    <footer>
+      <div class="footer-content">
+        <ul class="socials">
+          <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+          <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+          <li><a href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+        </ul>
+        <div class="footerbottom">
+          <p>copywriter &copy;2021 Smile. desing by <span>chmod777</span></p>
+        </div>
+      </div>
+    </footer>
 
 
   </body>
